jest.mock("./git", () => ({
  ...jest.requireActual<typeof git>("./git"),
  getUntrackedFileList: jest.fn(),
  getDiffFileList: jest.fn(),
  getDiffForFile: jest.fn(),
  hasCleanIndex: jest.fn(),
}));

import type { Linter } from "eslint";

import {
  diff as fixtureDiff,
  staged as fixtureStaged,
} from "./__fixtures__/diff";
import { postprocessArguments } from "./__fixtures__/postprocessArguments";
import * as git from "./git";
const importProcessors = async (): Promise<typeof import("./processors.js")> =>
  import("./processors.js");

const [messages, filename] = postprocessArguments;
const untrackedFilename = "an-untracked-file.js";

const gitMocked: jest.MockedObjectDeep<typeof git> = jest.mocked(git);
gitMocked.getDiffFileList.mockReturnValue([filename]);
gitMocked.getUntrackedFileList.mockReturnValue([untrackedFilename]);

describe("processors", () => {
  it("preprocess (diff and staged)", async () => {
    // The preprocessor does not depend on `staged` being true or false, so it's
    // sufficient to only test one of them.
    const validFilename = filename;
    const sourceCode = "/** Some source code */";

    const { diff: diffProcessors } = await importProcessors();

    expect(diffProcessors.preprocess(sourceCode, validFilename)).toEqual([
      sourceCode,
    ]);
  });

  it("preprocess refreshes untracked files when filename is unknown", async () => {
    const sourceCode = "/** Some source code */";
    const unknownFilename = "unknown-file.ts";
    gitMocked.getUntrackedFileList
      .mockReturnValueOnce([])
      .mockReturnValueOnce([])
      .mockReturnValueOnce([]);

    const { diff: diffProcessors } = await importProcessors();

    expect(diffProcessors.preprocess(sourceCode, unknownFilename)).toEqual([]);
    expect(gitMocked.getUntrackedFileList).toHaveBeenCalledWith(false, true);
  });

  it("diff postprocess", async () => {
    gitMocked.getDiffForFile.mockReturnValue(fixtureDiff);

    const { diff: diffProcessors } = await importProcessors();

    expect(diffProcessors.postprocess(messages, filename)).toMatchSnapshot();
  });

  it("diff postprocess with no messages", async () => {
    gitMocked.getDiffForFile.mockReturnValue(fixtureDiff);

    const { diff: diffProcessors } = await importProcessors();

    const noMessages: Linter.LintMessage[][] = [];
    expect(diffProcessors.postprocess(noMessages, filename)).toEqual(
      noMessages,
    );
  });

  it("diff postprocess for untracked files with messages", async () => {
    gitMocked.getDiffForFile.mockReturnValue(fixtureDiff);

    const { staged: stagedProcessors } = await importProcessors();

    const untrackedFilesMessages: Linter.LintMessage[] = [
      { ruleId: "mock", severity: 1, message: "mock msg", line: 1, column: 1 },
    ];

    expect(
      stagedProcessors.postprocess([untrackedFilesMessages], untrackedFilename),
    ).toEqual(untrackedFilesMessages);
  });

  it("staged postprocess", async () => {
    gitMocked.hasCleanIndex.mockReturnValueOnce(true);
    gitMocked.getDiffForFile.mockReturnValueOnce(fixtureStaged);

    const { staged: stagedProcessors } = await importProcessors();

    expect(stagedProcessors.postprocess(messages, filename)).toMatchSnapshot();
  });

  it("should report fatal errors", async () => {
    gitMocked.getDiffForFile.mockReturnValue(fixtureDiff);
    const [[firstMessage, ...restMessage], ...restMessageArray] = messages;
    const messagesWithFatal: Linter.LintMessage[][] = [
      [{ ...firstMessage, fatal: true }, ...restMessage],
      ...restMessageArray,
    ];

    const { diff: diffProcessors } = await importProcessors();

    expect(diffProcessors.postprocess(messages, filename)).toHaveLength(2);
    expect(
      diffProcessors.postprocess(messagesWithFatal, filename),
    ).toHaveLength(3);
  });

  it("should report fatal errors for staged postprocess with unclean index", async () => {
    gitMocked.hasCleanIndex.mockReturnValueOnce(false);
    gitMocked.getDiffForFile.mockReturnValueOnce(fixtureStaged);

    const { staged: stagedProcessors } = await importProcessors();

    const fileWithDirtyIndex = "file-with-dirty-index.js";
    const [errorMessage] = stagedProcessors.postprocess(
      messages,
      fileWithDirtyIndex,
    );

    expect(errorMessage?.fatal).toBe(true);
    expect(errorMessage?.message).toMatchInlineSnapshot(
      `"file-with-dirty-index.js has unstaged changes. Please stage or remove the changes."`,
    );
  });
});

describe("configs", () => {
  it("diff", async () => {
    const { diffConfig } = await importProcessors();
    expect(diffConfig).toMatchSnapshot();
  });

  it("staged", async () => {
    const { stagedConfig } = await importProcessors();
    expect(stagedConfig).toMatchSnapshot();
  });
});

describe("fatal error-message", () => {
  it("getUnstagedChangesError", async () => {
    const { getUnstagedChangesError } = await importProcessors();

    const [result] = getUnstagedChangesError("mock filename.ts");
    expect(result.fatal).toBe(true);
    expect(result.message).toMatchInlineSnapshot(
      '"mock filename.ts has unstaged changes. Please stage or remove the changes."',
    );
  });
});
