// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`configs diff 1`] = `
{
  "overrides": [
    {
      "files": [
        "*",
      ],
      "processor": "diff/diff",
    },
  ],
  "plugins": [
    "diff",
  ],
}
`;

exports[`configs staged 1`] = `
{
  "overrides": [
    {
      "files": [
        "*",
      ],
      "processor": "diff/staged",
    },
  ],
  "plugins": [
    "diff",
  ],
}
`;

exports[`processors diff postprocess 1`] = `
[
  {
    "column": 1,
    "line": 2,
    "message": "Expected { after 'if' condition.",
    "messageId": "missingCurlyAfterCondition",
    "nodeType": "IfStatement",
    "ruleId": "curly",
    "severity": 1,
  },
  {
    "column": 1,
    "fix": Object {
      "range": Array [
        0,
        3,
      ],
      "text": "",
    },
    "line": 3,
    "message": "Expected { after 'if' condition.",
    "messageId": "missingCurlyAfterCondition",
    "nodeType": "IfStatement",
    "ruleId": "curly",
    "severity": 1,
  },
]
`;

exports[`processors staged postprocess 1`] = `
[
  {
    "column": 1,
    "line": 2,
    "message": "Expected { after 'if' condition.",
    "messageId": "missingCurlyAfterCondition",
    "nodeType": "IfStatement",
    "ruleId": "curly",
    "severity": 1,
  },
  Object {
    "column": 1,
    "fix": Object {
      "range": Array [
        0,
        3,
      ],
      "text": "",
    },
    "line": 3,
    "message": "Expected { after 'if' condition.",
    "messageId": "missingCurlyAfterCondition",
    "nodeType": "IfStatement",
    "ruleId": "curly",
    "severity": 1,
  },
]
`;
